[package]
name = "dude"
version = "0.1.0"
edition = "2021"
authors = ["seeyebe"]
description = "A single-binary helper that discovers, previews and removes pacman orphans"
license = "MIT OR Apache-2.0"
repository = "https://github.com/seeyebe/dude"
keywords = ["pacman", "arch-linux", "orphans", "package-manager"]
categories = ["command-line-utilities"]

[dependencies]
alpm = "4.0"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
dirs = "5.0"
nix = { version = "0.28", default-features = false, features = ["user"] }
notify-rust = { version = "4.0", optional = true }
atty = "0.2"

[features]
default = []
notifications = ["notify-rust"]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1